<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/movie_title"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_width="wrap_content"
        android:text="@string/movie_title"
        android:textSize="32sp" />

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_image"
                android:background="@color/img_background"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:layout_height="480dp"
                android:layout_marginVertical="20dp"
                android:layout_width="320dp"
                android:contentDescription="@string/image_poster_description"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:text="@string/movie_summary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/movie_description_text_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                tools:text="@string/sample_description" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>